tests/parse-errors/issue056-expr-1.zir
fun f() {
  let x = 5;
}

let comp main = read[int] >>> write[int]
